added subpanel support for create Activity and pickfeature-popover
1.8.14 (2)

--- a/src/app/pages/feature/editfeature/editfeature.page.scss
+++ b/src/app/pages/feature/editfeature/editfeature.page.scss
@@ -1,6 +1,8 @@
 app-editfeature {
 
-  height: 100%;
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
   
   ion-card-header {
     z-index: 10;
