--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
@@ -67,7 +67,7 @@
             </ion-card>
           </ion-col>
           <ion-col size-xs="12" size-sm="6">
-            <ion-card class="category-card" mode="md" (click)="chooseNewPlan()">
+            <ion-card class="category-card" mode="md" (click)="chooseFromMarketplace()">
               <ion-card-header>
                 <ion-card-title>Choose from Available Template</ion-card-title>
               </ion-card-header>
