--- a/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.scss
+++ b/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.scss
@@ -1,5 +1,8 @@
 app-showrecipientinfo {
-  height: 100%;
+
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
   
   .header-toolbar {
     padding: 6px;
