--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -126,7 +126,7 @@
       <ion-grid class="program-grid">
         <ion-row class="program-row">
           <ion-col class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3">
-            <ion-card class="program-card" (click)="chooseChildActivity()" id="create-new-moment">
+            <ion-card class="program-card" (click)="addNewContent()" id="create-new-moment">
               <ion-card-header class="ion-no-padding" color="lightgrey">
                 <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
                   <ion-icon name="add" color="darkgrey"></ion-icon>
@@ -144,7 +144,7 @@
               </ion-card-header>
               <div class="program-type"><ion-badge color="button1">{{content.resource['en-US'].value[0]}}</ion-badge></div>
               <div class="program-name light">{{content.matrix_string[0][0]}}</div>
-              <ion-button class="info-moment ion-no-padding ion-no-margin" (click)="editContent($event, content)" fill="clear" size="small">
+              <ion-button class="info-moment ion-no-padding ion-no-margin" (click)="openChildActivity($event, content, 'edit')" fill="clear" size="small">
                 <ion-icon name="information-circle-outline" color="secondary"></ion-icon>
               </ion-button>
             </ion-card>
@@ -164,7 +164,7 @@
           <ion-input class="moment-input" type="text" [(ngModel)]="content.matrix_string[0][0]" [hidden]="content._id"></ion-input>
           <span class="moment-input" *ngIf="content._id">{{content.matrix_string[0][0]}}</span>
           <ion-buttons slot="end" class="ion-no-margin">
-            <ion-button fill="clear" color="grey" (click)="editContent($event, content)"><ion-icon name="cog"></ion-icon></ion-button>
+            <ion-button fill="clear" color="grey" (click)="openChildActivity($event, content, 'edit')"><ion-icon name="cog"></ion-icon></ion-button>
             <ion-button fill="clear" (click)="removeContent($event, j)" class="close-button"><ion-icon name="trash" color="grey"></ion-icon></ion-button>
           </ion-buttons>
         </ion-item>
