--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -1,6 +1,8 @@
 app-showfeature {
 
-  height: 100%;
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
 
   ion-menu-toggle {
     ion-badge {
