--- a/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.scss
+++ b/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.scss
@@ -90,7 +90,7 @@ app-showrecipientinfo {
   }
 
   .program-card {
-    width: auto;
+    width: 133px;
     object-fit: contain;
     margin: 0 3%;
   }
