--- a/src/app/pages/feature/createfeature/createfeature.page.scss
+++ b/src/app/pages/feature/createfeature/createfeature.page.scss
@@ -229,7 +229,7 @@ app-createfeature {
 
   .program-card {
     height: 100%;
-    width: 100%;
+    width: 133px;
     object-fit: contain;
     margin: 0 3%;
   }
