--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.scss
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.scss
@@ -71,7 +71,7 @@ app-feature-schedule {
   }
 
   .program-card {
-    width: auto;
+    width: 133px;
     object-fit: contain;
     margin: 0 3%;
   }
