--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.scss
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.scss
@@ -13,6 +13,7 @@ app-pickfeature-popover {
   }
 
   .category-card {
+    width: 220px;
     opacity: 0.3;
     height: 100%;
   }
@@ -23,7 +24,7 @@ app-pickfeature-popover {
   }
 
   .program-card {
-    width: auto;
+    width: 133px;
     object-fit: contain;
     margin: 0 3%;
   }
