--- a/src/app/pages/group/groupchat/groupchat.page.scss
+++ b/src/app/pages/group/groupchat/groupchat.page.scss
@@ -668,8 +668,8 @@ app-groupchat {
   }
 
   .program-card {
-    height: 100%;
-    width: 100%;
+    height: 100px;
+    width: 133px;
     object-fit: contain;
     margin: 0 3%;
   }
