--- a/src/app/pages/feature/createfeature/createfeature.page.html
+++ b/src/app/pages/feature/createfeature/createfeature.page.html
@@ -34,7 +34,7 @@
             </ion-item>
             <ion-grid>
               <ion-row class="ion-justify-content-center ion-align-items-center">
-                <ion-col class="ion-align-self-center" *ngFor="let referenceActivity of referenceActivities; index as j; trackBy: customTrackBy" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="2">
+                <ion-col class="ion-align-self-center" *ngFor="let referenceActivity of referenceActivities; index as j; trackBy: customTrackBy" size="auto">
                   <ion-card class="program-card" (click)="openReference(j)">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
@@ -47,7 +47,7 @@
                     </ion-button>
                   </ion-card>
                 </ion-col>
-                <ion-col class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="2">
+                <ion-col class="ion-align-self-center" size="auto">
                   <ion-card class="program-card" (click)="addReference()">
                     <ion-card-header class="ion-no-padding" color="lightgrey">
                       <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
@@ -114,7 +114,7 @@
             </ion-item>
             <ion-grid>
               <ion-row class="ion-justify-content-center ion-align-items-center">
-                <ion-col class="ion-align-self-center" *ngFor="let referenceActivity of referenceActivities; index as j; trackBy: customTrackBy" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="2">
+                <ion-col class="ion-align-self-center" *ngFor="let referenceActivity of referenceActivities; index as j; trackBy: customTrackBy" size="auto">
                   <ion-card class="program-card" (click)="openReference(j)">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
@@ -127,7 +127,7 @@
                     </ion-button>
                   </ion-card>
                 </ion-col>
-                <ion-col class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="2">
+                <ion-col class="ion-align-self-center" size="auto">
                   <ion-card class="program-card" (click)="addReference()">
                     <ion-card-header class="ion-no-padding" color="lightgrey">
                       <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
@@ -156,7 +156,7 @@
             </ion-item>
             <ion-grid>
               <ion-row class="ion-justify-content-center ion-align-items-center">
-                <ion-col class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="2">
+                <ion-col class="ion-align-self-center" size="auto">
                   <ion-card class="program-card" (click)="inviteToJoinCommunity()">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
@@ -166,7 +166,7 @@
                     <div class="program-name light">{{moment.matrix_string[0][0]}}</div>
                   </ion-card>
                 </ion-col>
-                <ion-col class="ion-align-self-center" *ngFor="let referenceActivity of referenceActivities; index as j; trackBy: customTrackBy" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="2">
+                <ion-col class="ion-align-self-center" *ngFor="let referenceActivity of referenceActivities; index as j; trackBy: customTrackBy" size="auto">
                   <ion-card class="program-card" (click)="inviteToJoinProgram(j)">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
