--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -125,7 +125,7 @@
       </ion-toolbar>
       <ion-grid class="program-grid">
         <ion-row class="program-row">
-          <ion-col class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3">
+          <ion-col class="ion-align-self-center" size="auto">
             <ion-card class="program-card" (click)="addNewContent()" id="create-new-moment">
               <ion-card-header class="ion-no-padding" color="lightgrey">
                 <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
@@ -135,7 +135,7 @@
               <div class="program-name dark">Add</div>
             </ion-card>
           </ion-col>
-          <ion-col class="ion-align-self-center" *ngFor="let content of samples; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3" [hidden]="!((content.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || content.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1))">
+          <ion-col class="ion-align-self-center" *ngFor="let content of activities; index as i" size="auto" [hidden]="!((content.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || content.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1))">
             <ion-card class="program-card" (click)="chooseContent(content)">
               <ion-card-header class="ion-no-padding">
                 <div class="program-photo-container">
