--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
@@ -34,7 +34,7 @@
           <ion-label class="ion-margin-start">Choose One:</ion-label>
         </ion-row>
         <ion-row class="ion-justify-content-start">
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="categoryId = '5e9f46e1c8bf1a622fec69d5'" [ngClass]="{'selected': categoryId === '5e9f46e1c8bf1a622fec69d5'}">
               <ion-card-header>
                 <ion-card-title>Journey</ion-card-title>
@@ -44,7 +44,7 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="categoryId = '5e9fe372c8bf1a622fec69d8'" [ngClass]="{'selected': categoryId === '5e9fe372c8bf1a622fec69d8'}">
               <ion-card-header>
                 <ion-card-title>Mentoring</ion-card-title>
@@ -54,7 +54,7 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="categoryId = '5e9fe35cc8bf1a622fec69d7'" [ngClass]="{'selected': categoryId === '5e9fe35cc8bf1a622fec69d7'}">
               <ion-card-header>
                 <ion-card-title>Group</ion-card-title>
@@ -64,7 +64,7 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="categoryId = '5c915475e172e4e64590e348'" [ngClass]="{'selected': categoryId === '5c915475e172e4e64590e348'}">
               <ion-card-header>
                 <ion-card-title>Program</ion-card-title>
@@ -74,7 +74,7 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="categoryId = '5c915324e172e4e64590e346'" [ngClass]="{'selected': categoryId === '5c915324e172e4e64590e346'}">
               <ion-card-header>
                 <ion-card-title>Community</ion-card-title>
@@ -99,7 +99,7 @@
         <!--<ion-label class="program-title ion-margin" *ngIf="(categoryId !== '5e17acd47b00ea76b75e5a71') && parent.matrix_string">{{parent.matrix_string[0][0]}}</ion-label>-->
         <ion-grid class="program-grid">
           <ion-row class="program-row">
-            <ion-col *ngIf="allowCreate" class="ion-align-self-center" size-xs="6">
+            <ion-col *ngIf="allowCreate" class="ion-align-self-center" size="auto">
               <ion-card class="program-card" (click)="createMoment()" id="create-new-moment">
                 <ion-card-header class="ion-no-padding" color="lightgrey">
                   <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
@@ -109,7 +109,7 @@
                 <div class="program-name dark">Create</div>
               </ion-card>
             </ion-col>
-            <ion-col class="ion-align-self-center" *ngFor="let sample of samples; index as i" size-xs="6" [hidden]="!(sample.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || sample.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
+            <ion-col class="ion-align-self-center" *ngFor="let sample of samples; index as i" size="auto" [hidden]="!(sample.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || sample.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
               <ion-card class="program-card" (click)="selectSample(sample)">
                 <ion-card-header class="ion-no-padding">
                   <div class="program-photo-container">
@@ -128,7 +128,7 @@
     </div>
     <ion-grid class="program-grid" *ngIf="currentView === 'recent'">
       <ion-row class="program-row">
-        <ion-col class="ion-align-self-center" *ngFor="let calendarItem of calendarService.calendarItems.slice().reverse() | slice : 0 : (categoryId === '5e17acd47b00ea76b75e5a71' ? calendarService.calendarItems.length - 1 : 50); index as i" size-xs="6" [hidden]="!(calendarItem.moment?.resource && calendarItem.moment.resource.field === 'User Defined Activity' && (calendarItem.moment.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || calendarItem.moment.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1) && (calendarItem.moment.categories.indexOf(categoryId) > -1))">
+        <ion-col class="ion-align-self-center" size="auto" *ngFor="let calendarItem of calendarService.calendarItems.slice().reverse() | slice : 0 : (categoryId === '5e17acd47b00ea76b75e5a71' ? calendarService.calendarItems.length - 1 : 50); index as i" [hidden]="!(calendarItem.moment?.resource && calendarItem.moment.resource.field === 'User Defined Activity' && (calendarItem.moment.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || calendarItem.moment.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1) && (calendarItem.moment.categories.indexOf(categoryId) > -1))">
           <ion-card class="program-card" (click)="selectCalendarItem(calendarItem)" *ngIf="calendarItem.moment" >   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
             <ion-card-header class="ion-no-padding">
               <div class="program-photo-container">
@@ -165,7 +165,7 @@
           <ion-label class="ion-margin-start">What is your role in {{selectedMoments[0].matrix_string[0][0]}}?</ion-label>
         </ion-row>
         <ion-row class="ion-justify-content-center">
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="joinAs = 'user_list_1'" [ngClass]="{'selected': joinAs === 'user_list_1'}">
               <ion-card-header>
                 <ion-card-title *ngIf="categoryId === '5e9f46e1c8bf1a622fec69d5'">Learner</ion-card-title>
@@ -185,7 +185,7 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="joinAs = 'user_list_3'" [ngClass]="{'selected': joinAs === 'user_list_3'}">
               <ion-card-header>
                 <ion-card-title *ngIf="categoryId === '5e9f46e1c8bf1a622fec69d5'">Facilitator</ion-card-title>
@@ -215,7 +215,7 @@
   <ion-toolbar *ngIf="step === 1 && selectedMoments.length">
     <ion-grid class="selected-grid">
       <ion-row>
-        <ion-col class="ion-align-self-center" *ngFor="let moment of selectedMoments; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3">
+        <ion-col class="ion-align-self-center" *ngFor="let moment of selectedMoments; index as i" size="auto">
           <ion-card class="program-card" (click)="openFeature($event, moment)">
             <ion-card-header class="ion-no-padding">
               <div class="program-photo-container">
