--- a/src/app/pages/group/groupchat/groupchat.page.html
+++ b/src/app/pages/group/groupchat/groupchat.page.html
@@ -52,7 +52,7 @@
           <!--User Defined Activity-->
           <ion-grid class="multiple-photos" *ngIf="message.moment && message.moment.resource && message.moment.resource.field === 'User Defined Activity' && message.moment.resource.hasOwnProperty('en-US') && message.moment.resource['en-US'].value[0] !== 'Poll'">
             <ion-row class="ion-justify-content-start ion-no-padding">
-              <ion-col class="ion-align-self-center ion-no-padding ion-padding-end ion-padding-top" size-xs="8" size-sm="8" size-md="6" size-lg="6" size-xl="4">
+              <ion-col class="ion-align-self-center ion-no-padding ion-padding-end ion-padding-top" size="auto">
                 <ion-card class="program-card" (click)="openRestvoFeature(message.moment)">
                   <ion-card-header class="ion-no-padding">
                     <div class="chat-program-photo-container">
@@ -220,7 +220,7 @@
         <!--User Defined Activity-->
         <ion-grid class="multiple-photos" *ngIf="message.moment && message.moment.resource && message.moment.resource.field === 'User Defined Activity' && message.moment.resource.hasOwnProperty('en-US') && message.moment.resource['en-US'].value[0] !== 'Poll'">
           <ion-row class="ion-justify-content-end ion-no-padding">
-            <ion-col class="ion-align-self-center ion-no-padding ion-padding-end ion-padding-top" size-xs="8" size-sm="8" size-md="6" size-lg="6" size-xl="4">
+            <ion-col class="ion-align-self-center ion-no-padding ion-padding-end ion-padding-top" size="auto">
               <ion-card class="program-card" (click)="openRestvoFeature(message.moment)">
                 <ion-card-header class="ion-no-padding">
                   <div class="chat-program-photo-container">
@@ -476,7 +476,7 @@
         </ion-grid>
         <ion-grid class="selected-grid" *ngIf="selectedMoments.length">
           <ion-row>
-            <ion-col class="ion-align-self-center" *ngFor="let moment of selectedMoments; index as i" size-xs="12" size-sm="12" size-md="6" size-lg="6" size-xl="4">
+            <ion-col class="ion-align-self-center" *ngFor="let moment of selectedMoments; index as i" size="auto">
               <ion-card class="program-card" (click)="openRestvoFeature(moment)">
                 <ion-card-header class="ion-no-padding">
                   <div class="program-photo-container">
@@ -506,7 +506,7 @@
   </ion-toolbar>
   <ion-toolbar id="expandable" *ngIf="moreOptions" class="ion-no-padding">
     <div class="moreoptions">
-      <ion-slides class="program-slides" [options]="{slidesPerView: 3.5, grabCursor: true}">
+      <ion-slides class="program-slides" [options]="{grabCursor: true}">
         <ion-slide class="program-slide" *ngFor="let calendarItem of calendarService.calendarItems.slice().reverse() | slice : 0 : 20; index as i; trackBy: customTrackBy" [hidden]="!((calendarItem.relationship ? (calendarItem.relationship === chatService.currentChatProps[this.propIndex].moment?._id) : true) && calendarItem.moment?.resource && calendarItem.moment.resource.field === 'User Defined Activity' && calendarItem.moment.resource['en-US'].value[0] !== 'Onboarding Process')">
           <ion-card class="program-card" (click)="selectCalendarItem($event, calendarItem)" *ngIf="calendarItem.moment">
             <ion-card-header class="ion-no-padding">
