added admin creator, bug fix
1.8.14 (2)

--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
@@ -80,4 +80,7 @@
       </ion-grid>
     </ion-row>
   </ion-grid>
+  <ion-grid *ngIf="planPage === 'create'" class="full-height">
+
+  </ion-grid>
 </ion-content>
