--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -160,63 +160,63 @@
     </ion-item>
     <ion-item (click)="clickManageMenu('insight', null)">
       <ion-icon slot="start" name="person" *ngIf="platform.width() < 768"></ion-icon>
-      <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'insight')}">Insight</ion-label>
+      <ion-label>Insight</ion-label>
     </ion-item>
     <ion-item (click)="clickManageMenu('profile', null)">
       <ion-icon slot="start" name="clipboard" *ngIf="platform.width() < 768"></ion-icon>
-      <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'profile')}" *ngIf="moment && moment.categories && !moment.categories.includes('5c915476e172e4e64590e349')">Profile</ion-label>
-      <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'profile')}" *ngIf="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">Plan</ion-label>
+      <ion-label *ngIf="moment && moment.categories && !moment.categories.includes('5c915476e172e4e64590e349')">Profile</ion-label>
+      <ion-label *ngIf="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">Plan</ion-label>
     </ion-item>
     <ion-item (click)="clickManageMenu('people', null)">
       <ion-icon slot="start" name="people" *ngIf="platform.width() < 768"></ion-icon>
-      <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'people')}">People</ion-label>
+      <ion-label>People</ion-label>
     </ion-item>
     <ion-item (click)="clickManageMenu('programs', null)" *ngIf="moment && moment.categories && moment.categories.includes('5c915324e172e4e64590e346') && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5c915475e172e4e64590e348')))">
       <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-      <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'programs')}">Programs</ion-label>
+      <ion-label>Programs</ion-label>
     </ion-item>
     <!--show this for everything except Plan, and when Plan is in child_categories-->
     <ion-item (click)="clickManageMenu('plans', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5c915476e172e4e64590e349'))">
       <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-      <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'plans')}">Plans</ion-label>
+      <ion-label>Plans</ion-label>
     </ion-item>
     <!--Journey, only Show in Community or Program, and if they enabled this Children Category-->
     <ion-item (click)="clickManageMenu('journey', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9f46e1c8bf1a622fec69d5')))"> <!--Journey-->
       <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-      <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'journey')}">Journey</ion-label>
+      <ion-label>Journey</ion-label>
     </ion-item>
     <!--Mentoring, only Show in Community or Program, and if they enabled this Children Category-->
     <ion-item (click)="clickManageMenu('mentoring', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9fe372c8bf1a622fec69d8')))"> <!--Mentoring-->
       <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-      <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'mentoring')}">Mentoring</ion-label>
+      <ion-label>Mentoring</ion-label>
     </ion-item>
     <!--Groups, only Show in Community or Program, and if they enabled this Children Category-->
     <ion-item (click)="clickManageMenu('groups', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9fe35cc8bf1a622fec69d7')))"> <!--Group-->
       <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-      <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'groups')}">Groups</ion-label>
+      <ion-label>Groups</ion-label>
     </ion-item>
     <ion-item-group *ngIf="moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210)"> <!--if Schedule is enabled-->
       <ion-item (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'schedule' && selectedSchedule._id === schedule._id)}">Schedule {{i + 1}}</ion-label>
+        <ion-label>Schedule {{i + 1}}</ion-label>
       </ion-item>
       <ion-item (click)="clickManageMenu('new-schedule', null)">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'new-schedule')}">+ Schedule</ion-label>
+        <ion-label>+ Schedule</ion-label>
       </ion-item>
     </ion-item-group>
     <ion-item (click)="clickManageMenu('onboarding', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
       <ion-icon slot="start" name="list" *ngIf="platform.width() < 768"></ion-icon>
-      <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'onboarding')}">Onboarding</ion-label>
+      <ion-label>Onboarding</ion-label>
     </ion-item>
     <ion-item-group *ngIf="moment && moment.categories.includes('5c915324e172e4e64590e346')"> <!--Community Only Feature-->
       <ion-item (click)="clickManageMenu('billing', null)" [hidden]="!this.stripeCustomer">
         <ion-icon slot="start" name="card" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'billing')}">Billing</ion-label>
+        <ion-label>Billing</ion-label>
       </ion-item>
       <ion-item (click)="clickManageMenu('subscription', null)">
         <ion-icon slot="start" name="planet" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'subscription')}">Subscription</ion-label>
+        <ion-label>Subscription</ion-label>
       </ion-item>
     </ion-item-group>
     <ion-item routerLink="/app/manage" *ngIf="moment._id === '5d5785b462489003817fee18' && userData.hasPlatformAdminAccess">
