--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -97,19 +97,19 @@
             <ion-label class="menu-label">Programs</ion-label>
           </ion-item>
         </ion-col>
-        <ion-col [ngClass]="{'selected': router.url.includes('plan')}" (click)="clickManageMenu('plans', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5c915476e172e4e64590e349'))">
-          <ion-item class="ion-no-padding" [color]="router.url.includes('plan') ? 'primary' : 'secondary'" lines="none" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">
+        <ion-col [ngClass]="{'selected': router.url.includes('plan')}" (click)="clickManageMenu('plans', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))"> <!--if Community or Program-->
+          <ion-item class="ion-no-padding" [color]="router.url.includes('plan') ? 'primary' : 'secondary'" lines="none" >
             <ion-icon class="ion-no-margin" slot="start" name="paper-plane"></ion-icon>
             <ion-label class="menu-label">Plans</ion-label>
           </ion-item>
         </ion-col>
-        <ion-col [ngClass]="{'selected': router.url.includes('creator')}" (click)="clickManageMenu('creator', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5c915476e172e4e64590e349'))">
-          <ion-item class="ion-no-padding" [color]="router.url.includes('creator') ? 'primary' : 'secondary'" lines="none" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">
+        <ion-col [ngClass]="{'selected': router.url.includes('creator')}" (click)="clickManageMenu('creator', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5e9f46e1c8bf1a622fec69d5') || moment.categories.includes('5dfdbb547b00ea76b75e5a70'))"> <!--if Journey or Relationship-->
+          <ion-item class="ion-no-padding" [color]="router.url.includes('creator') ? 'primary' : 'secondary'" lines="none">
             <ion-icon class="ion-no-margin" slot="start" name="paper-plane"></ion-icon>
-            <ion-label class="menu-label">Creator</ion-label>
+            <ion-label class="menu-label">Curriculum</ion-label>
           </ion-item>
         </ion-col>
-        <ion-col [ngClass]="{'selected': (router.url.includes('/schedule/') && selectedSchedule && selectedSchedule._id === schedule._id)}" (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i" [hidden]="!(moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210))"> <!--if Schedule is enabled-->
+        <!--<ion-col [ngClass]="{'selected': (router.url.includes('/schedule/') && selectedSchedule && selectedSchedule._id === schedule._id)}" (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i" [hidden]="!(moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210))"> &lt;!&ndash;if Schedule is enabled&ndash;&gt;
           <ion-item class="ion-no-padding" [color]="(router.url.includes('/schedule/') && selectedSchedule && selectedSchedule._id === schedule._id) ? 'primary' : 'secondary'" lines="none">
             <ion-icon class="ion-no-margin" slot="start" name="book"></ion-icon>
             <ion-label class="menu-label">Schedule {{i + 1}}</ion-label>
@@ -120,7 +120,7 @@
             <ion-icon class="ion-no-margin" slot="start" name="book"></ion-icon>
             <ion-label class="menu-label">+ Schedule</ion-label>
           </ion-item>
-        </ion-col>
+        </ion-col>-->
         <ion-col [ngClass]="{'selected': router.url.includes('onboarding')}" (click)="clickManageMenu('onboarding', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
           <ion-item class="ion-no-padding" [color]="router.url.includes('onboarding') ? 'primary' : 'secondary'" lines="none">
             <ion-icon class="ion-no-margin" slot="start" name="list"></ion-icon>
@@ -195,7 +195,7 @@
       <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
       <ion-label>Groups</ion-label>
     </ion-item>
-    <ion-item-group *ngIf="moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210)"> <!--if Schedule is enabled-->
+    <!--<ion-item-group *ngIf="moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210)"> &lt;!&ndash;if Schedule is enabled&ndash;&gt;
       <ion-item (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label>Schedule {{i + 1}}</ion-label>
@@ -204,7 +204,7 @@
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label>+ Schedule</ion-label>
       </ion-item>
-    </ion-item-group>
+    </ion-item-group>-->
     <ion-item (click)="clickManageMenu('onboarding', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
       <ion-icon slot="start" name="list" *ngIf="platform.width() < 768"></ion-icon>
       <ion-label>Onboarding</ion-label>
